[gd_scene load_steps=4 format=3 uid="uid://dhfu8imjy0u08"]

[ext_resource type="Script" uid="uid://cejo7l7ugh2ny" path="res://scripts/story/story_creation_panel.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://ciav2n21hexqb" path="res://assets/images/story_background.png" id="2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.8, 0.9, 1, 0.85)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.8, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 8

[node name="StoryCreationPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 6

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.3)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -320.0
offset_right = 500.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="TopBar" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="BackButton" type="Button" parent="Panel/VBoxContainer/TopBar"]
custom_minimum_size = Vector2(80, 35)
layout_mode = 2
size_flags_horizontal = 0
text = "返回"

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "创建故事"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Panel/VBoxContainer/TopBar"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="Content" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="KeywordSection" type="HBoxContainer" parent="Panel/VBoxContainer/Content"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="KeywordLabel" type="Label" parent="Panel/VBoxContainer/Content/KeywordSection"]
layout_mode = 2
size_flags_horizontal = 0
text = "关键词："

[node name="KeywordInput" type="LineEdit" parent="Panel/VBoxContainer/Content/KeywordSection"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "让AI生成故事，可留空"

[node name="GenerateButton" type="Button" parent="Panel/VBoxContainer/Content/KeywordSection"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 0
text = "生成故事"

[node name="TitleSection" type="VBoxContainer" parent="Panel/VBoxContainer/Content"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 5

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer/Content/TitleSection"]
layout_mode = 2
text = "*故事标题："

[node name="TitleInput" type="LineEdit" parent="Panel/VBoxContainer/Content/TitleSection"]
layout_mode = 2
placeholder_text = "给故事起个名字"

[node name="SummarySection" type="VBoxContainer" parent="Panel/VBoxContainer/Content"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="SummaryLabel" type="Label" parent="Panel/VBoxContainer/Content/SummarySection"]
layout_mode = 2
size_flags_vertical = 0
text = "*故事简介："

[node name="SummaryInput" type="TextEdit" parent="Panel/VBoxContainer/Content/SummarySection"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "这一定会是一个不同以往的浪漫故事♪"

[node name="BottomBar" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="CreateButton" type="Button" parent="Panel/VBoxContainer/BottomBar"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "创建故事"

[connection signal="pressed" from="Panel/VBoxContainer/TopBar/BackButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Content/KeywordSection/GenerateButton" to="." method="_on_generate_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/BottomBar/CreateButton" to="." method="_on_create_pressed"]
